[project]
name = "2bwikiscrape"
version = "0.1.0"
description = "A short and simple Python project to scrape the 2b2t wiki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "curl-cffi>=0.13.0",
]

[project.urls]
Repository = "https://github.com/RagingEnby/2bWikiScrape"
